--- a/select1-푸터브랜드사이트.html
+++ b/select1-푸터브랜드사이트.html
@@ -64,8 +64,9 @@
 </footer>
 
 <!-- Script Source -->
-<script src="js/jquery-3.6.1.min.js"></script>
+<script src="js/jquery-3.6.3.min.js"></script>
 <script src="js/jquery-ui-1.10.4.custom.min.js"></script>
+<script src="js/prefixfree.min.js"></script>
 <script src="js/select1.js"></script>
 </body>
 </html>
