--- a/sitemap1-하단OpenClose.html
+++ b/sitemap1-하단OpenClose.html
@@ -21,49 +21,49 @@
 					<ul class="sitemap_list">
 						<li><a href="#">아름다운가게란</a>
 							<ul class="site_sub">
-							   <li><a href="#">아름다운가게란</a></li>
-							   <li><a href="#">이사장 인사말</a></li>
-							   <li><a href="#">걸어온길</a></li>
-							   <li><a href="#">운영조직</a></li>
-							   <li><a href="#">찾아오시는길</a></li>
+								<li><a href="#">아름다운가게란</a></li>
+								<li><a href="#">이사장 인사말</a></li>
+								<li><a href="#">걸어온길</a></li>
+								<li><a href="#">운영조직</a></li>
+								<li><a href="#">찾아오시는길</a></li>
 							</ul>
 						</li>
 						<li><a href="#">사업소개</a>
 							<ul class="site_sub">
-							   <li><a href="#">나눔사업</a></li>
-							   <li><a href="#">재사용나눔가게</a></li>
-							   <li><a href="#">아름다운나눔장터</a></li>
-							   <li><a href="#">공익상품사업</a></li>
+								<li><a href="#">나눔사업</a></li>
+								<li><a href="#">재사용나눔가게</a></li>
+								<li><a href="#">아름다운나눔장터</a></li>
+								<li><a href="#">공익상품사업</a></li>
 							</ul>
 						</li>
 						<li><a href="#">참여하기</a>
 							<ul class="site_sub">
-							   <li><a href="#">참여가이드</a></li>
-							   <li><a href="#">기부</a></li>
-							   <li><a href="#">기증</a></li>
-							   <li><a href="#">특별한참여</a></li>
-							   <li><a href="#">참여갤러리</a></li>
+								<li><a href="#">참여가이드</a></li>
+								<li><a href="#">기부</a></li>
+								<li><a href="#">기증</a></li>
+								<li><a href="#">특별한참여</a></li>
+								<li><a href="#">참여갤러리</a></li>
 							</ul>
 						</li>
 						<li><a href="#">캠페인&amp;이벤트</a>
 							<ul class="site_sub">
-							   <li><a href="#">진행중인 캠페인&amp;이벤트</a></li>
-							   <li><a href="#">종료된 켐페인&amp;이벤트</a></li>
+								<li><a href="#">진행중인 캠페인&amp;이벤트</a></li>
+								<li><a href="#">종료된 켐페인&amp;이벤트</a></li>
 							</ul>
 						</li>
 						<li><a href="#">새소식</a>
 							<ul class="site_sub">
-							   <li><a href="#">전국매장소식</a></li>
-							   <li><a href="#">공지사항</a></li>
-							   <li><a href="#">보도자료</a></li>
-							   <li><a href="#">Beautiful story</a></li>
-							   <li><a href="#">뉴스레터</a></li>
+								<li><a href="#">전국매장소식</a></li>
+								<li><a href="#">공지사항</a></li>
+								<li><a href="#">보도자료</a></li>
+								<li><a href="#">Beautiful story</a></li>
+								<li><a href="#">뉴스레터</a></li>
 							</ul>
 						</li>
 						<li><a href="#">참여만족센터</a>
 							<ul class="site_sub">
-							   <li><a href="#">자주묻는질문</a></li>
-							   <li><a href="#">온라인문의</a>
+								<li><a href="#">자주묻는질문</a></li>
+								<li><a href="#">온라인문의</a>
 									<ul class="site_sub2">
 										<li><a href="#">- 1:1문의</a></li> 
 										<li><a href="#">- 문의내역</a></li>
@@ -105,8 +105,9 @@
 </div>
 
 <!-- Script Source -->
-<script src="js/jquery-3.6.1.min.js"></script>
+<script src="js/jquery-3.6.3.min.js"></script>
 <script src="js/jquery-ui-1.10.4.custom.min.js"></script>
+<script src="js/prefixfree.min.js"></script>
 <script src="js/sitemap1.js"></script>
 </body>
 </html>
