--- a/select2-푸터계열사.html
+++ b/select2-푸터계열사.html
@@ -75,8 +75,9 @@
 </div>
 
 <!-- Script Source -->
-<script src="js/jquery-3.6.1.min.js"></script>
+<script src="js/jquery-3.6.3.min.js"></script>
 <script src="js/jquery-ui-1.10.4.custom.min.js"></script>
+<script src="js/prefixfree.min.js"></script>
 <script src="js/select2.js"></script>
 </body>
 </html>
