--- a/sitemap2-상단OpenClose.html
+++ b/sitemap2-상단OpenClose.html
@@ -92,8 +92,9 @@
 
 
 <!-- Script Source -->
-<script src="js/jquery-3.6.1.min.js"></script>
+<script src="js/jquery-3.6.3.min.js"></script>
 <script src="js/jquery-ui-1.10.4.custom.min.js"></script>
+<script src="js/prefixfree.min.js"></script>
 <script src="js/sitemap2.js"></script>
 </body>
 </html>
